--- a/views/index.haml
+++ b/views/index.haml
@@ -17,7 +17,7 @@
   %ul
     %li
       %a{:href => ''}
-        %img{:alt => 'Haml', :src => 'images/haml_banner.gif'}/
+        %img{:alt => 'Haml', :src => '/images/haml_banner.gif'}/
     %li
       %a{:href => ''}
-        %img{:alt => 'Haml', :src => 'images/nichi_haml_banner.gif'}/
+        %img{:alt => 'Haml', :src => '/images/nichi_haml_banner.gif'}/
