--- a/views/style.sass
+++ b/views/style.sass
@@ -145,7 +145,7 @@ body
 
 div
   &#header
-    background-image: url(../images/header.gif)
+    background-image: url(/images/header.gif)
     height: 110px
     background-repeat: no-repeat
     h1
@@ -172,7 +172,7 @@ div
       margin-bottom: 15px
   &#form
     h2
-      background-image: url(../images/form_h2.gif)
+      background-image: url(/images/form_h2.gif)
       height: 20px
     textarea
       height: 450px
@@ -195,7 +195,7 @@ div
         display: block
         margin-right: auto
         margin-left: auto
-        background-image: url(../images/submit_button.jpg)
+        background-image: url(/images/submit_button.jpg)
         text-indent: -9999px
         &:link, &:visited
           background-position: 0px 0px
@@ -203,7 +203,7 @@ div
           background-position: 0px -130px
   &#about
     h2
-      background-image: url(../images/about_h2.gif)
+      background-image: url(/images/about_h2.gif)
       height: 20px
       margin-bottom: 15px
     float: left
@@ -227,7 +227,7 @@ div
     float: right
     width: 460px
     h2
-      background-image: url(../images/made_with_h2.gif)
+      background-image: url(/images/made_with_h2.gif)
       height: 20px
       margin-bottom: 15px
     ul li
@@ -246,7 +246,7 @@ div
     text-align: center
   &#created
     h2
-      background-image: url(../images/created_h2.gif)
+      background-image: url(/images/created_h2.gif)
       height: 20px
     pre
       background-color: #FFFFFF
@@ -257,7 +257,7 @@ div
       display: block
       code
         background-color: #F8F8FF
-        background-image: url("../images/pre_code.gif")
+        background-image: url("/images/pre_code.gif")
         display: block
         font-size: 13px
         line-height: 20px
