--- a/views/index.haml
+++ b/views/index.haml
@@ -16,8 +16,8 @@
   %h2 Ham CutletはHamlを使っています
   %ul
     %li
-      %a{:href => ''}
+      %a{:href => 'http://haml.hamptoncatlin.com/'}
         %img{:alt => 'Haml', :src => '/images/haml_banner.gif'}/
     %li
-      %a{:href => ''}
+      %a{:href => 'http://haml.ursm.jp/'}
         %img{:alt => 'Haml', :src => '/images/nichi_haml_banner.gif'}/
