--- a/views/created.haml
+++ b/views/created.haml
@@ -1,5 +1,4 @@
 #created.section
-  %h2 あああああ
+  %h2 インデントの美しいHTMLが出来ました
   %pre
-    %code
-      ああああああああああああああああああああああああああああああああ
+    %code=h @html
