はてブでの指摘に対応

--- a/views/index.haml
+++ b/views/index.haml
@@ -16,7 +16,7 @@
   %h2 Ham CutletはHamlを使っています
   %ul
     %li
-      %a{:href => 'http://haml.hamptoncatlin.com/'}
+      %a{:href => 'http://haml-lang.com/'}
         %img{:alt => 'Haml', :src => '/images/haml_banner.gif'}/
     %li
       %a{:href => 'http://haml.ursm.jp/'}
