--- a/views/created.haml
+++ b/views/created.haml
@@ -3,7 +3,11 @@
     .error
       %h2 HTMLに下記の問題があります。
       %p= flash[:error]
+      .to_top
+        %a{:href => '/'}トップページに戻る
+
   - else
     %h2 インデントの美しいHTMLが出来ました
-    %pre
-      %code=h @html
+    .source
+      %pre
+        %code=h @html
