--- a/views/index.haml
+++ b/views/index.haml
@@ -21,3 +21,17 @@
     %li
       %a{:href => 'http://haml.ursm.jp/'}
         %img{:alt => 'Haml', :src => '/images/nichi_haml_banner.gif'}/
+#request.section
+  %h2 バグ報告・機能追加のご依頼
+  .main
+    %p
+      %a{:href => 'http://help-me-hackers.com/'}
+        %img{:alt => 'Help me, hackers!', :src => '/images/hmhs.jpg'}/
+    %ol
+      %li
+        %a{:href => 'http://help-me-hackers.com/'}>Help me, hackers!
+        にバグ、要望を登録してください
+      %li 登録する際にオプションを開き、プロジェクトに「Hamcutlet」を選択
+      %li
+        %a{:href => 'http://github.com/komagata/hamcutlet'}>github
+        にもソースが置いてあるので、自分用にハムカツをカスタマイズすることも可能です
