--- a/views/style.sass
+++ b/views/style.sass
@@ -225,6 +225,36 @@ div
         margin-bottom: 10px
         &:last-child
           margin-bottom: 0px
+  &#request
+    h2
+      background-image: url(/images/about_h2.gif)
+      height: 20px
+      margin-bottom: 15px
+    float: left
+    width: 420px
+    div.main
+      background-color: #FFFFFF
+      padding: 20px
+      float: left
+      -webkit-border-radius: 20px
+      -moz-border-radius: 20px
+      border-radius: 20px
+      a
+        &:link img, &:visited img
+          border: 10px solid #CCCCCC
+        &:hover img, &:active img
+          border: 10px solid #8FD833
+      img
+	margin-bottom: 20px
+	margin-top: 5px
+    ol
+      margin-right: 10px
+      list-style-type: decimal
+      li
+        margin-left: 25px
+        margin-bottom: 10px
+        &:last-child
+          margin-bottom: 0px
   &#made_with
     float: right
     width: 460px
