--- a/views/style.sass
+++ b/views/style.sass
@@ -227,7 +227,7 @@ div
           margin-bottom: 0px
   &#request
     h2
-      background-image: url(/images/about_h2.gif)
+      background-image: url(/images/request_h2.gif)
       height: 20px
       margin-bottom: 15px
     float: left
