fixed Hamcutlet link

--- a/views/index.haml
+++ b/views/index.haml
@@ -31,7 +31,7 @@
       %li
         %a{:href => 'http://help-me-hackers.com/'}>Help me, hackers!
         にバグ、要望を登録してください
-      %li 登録する際にオプションを開き、プロジェクトに「Hamcutlet」を選択
+      %li 登録する際にオプションを開き、プロジェクトに「<a href="http://help-me-hackers.com/projects/3">Hamcutlet</a>」を選択
       %li
         %a{:href => 'http://github.com/komagata/hamcutlet'}>github
-        にもソースが置いてあるので、自分用にハムカツをカスタマイズすることも可能です
+        にもソースが置いてあるので、自分用にハムカツをカスタマイズすることも可能です。
