--- a/views/style.sass
+++ b/views/style.sass
@@ -280,6 +280,10 @@ div
     h2
       background-image: url(/images/created_h2.gif)
       height: 20px
+    div.error
+      h2
+        background-image: url(/images/error_h2.gif)
+        height: 20px
     div.source 
       background-color: #FFFFFF
       -webkit-border-radius: 20px
