--- a/views/style.sass
+++ b/views/style.sass
@@ -38,7 +38,7 @@ body
   margin: 0
   overflow: visible
   padding: 0
-  font: 16px/1.5 HiraMaruPro-W4,'メイリオ',skia,"Lucida Sans Unicode","Lucida Grande",Arial,Helvetica,"ヒラギノ丸ゴ Pro W4",HiraMaruPro-W4,Verdana,HiraMaruPro-W4,"ヒラギノ角ゴ Pro W3",HiraKakuPro-W3,Osaka,sans-serif
+  font: 16px/1.5 HiraMaruPro-W4,'メイリオ',"Lucida Sans Unicode","Lucida Grande",Arial,Helvetica,"ヒラギノ丸ゴ Pro W4",HiraMaruPro-W4,Verdana,HiraMaruPro-W4,"ヒラギノ角ゴ Pro W3",HiraKakuPro-W3,Osaka,sans-serif
   line-height: 1.7
 
 /* for IE7
