ie6でエラー表示

--- a/views/style.sass
+++ b/views/style.sass
@@ -1,5 +1,6 @@
 @charset "utf-8"
 
+
 div:after, ul:after, dl:after
   content: "."
   display: block
@@ -307,3 +308,18 @@ div
           overflow: auto
           margin-bottom: 0px
           padding-bottom: 0px
+
+
+
+* html *
+    background-color: #fff !important
+    background-image: none !important
+    border: none !important
+    display: none !important
+
+* html body
+    text-indent: 0px !important
+    background-repeat: no-repeat
+    background-position: center center
+    background-image: url(../images/error.jpg) !important
+    display: block !important
