ie6でエラー表示

--- a/views/style.sass
+++ b/views/style.sass
@@ -312,7 +312,7 @@ div
 
 
 * html *
-    background-color: #fff !important
+    background-color: #9dd8ce !important
     background-image: none !important
     border: none !important
     display: none !important
