--- a/views/style.sass
+++ b/views/style.sass
@@ -292,6 +292,8 @@ div
       border-radius: 20px
       padding: 20px
       display: block
+      textarea
+        width: 100%
       pre
         display: block
         background-image: url(../images/pre_code.gif)
