htmlをコピーボタンを追加

--- a/views/style.sass
+++ b/views/style.sass
@@ -281,6 +281,23 @@ div
     h2
       background-image: url(/images/created_h2.gif)
       height: 20px
+      width: 400px
+      display: block
+      float: right
+      margin-top: 10px
+      margin-right: 200px
+    button.raw
+      margin-left: 10px
+      width: 281px
+      height: 37px
+      border: 0
+      text-indent: -9999px
+      cursor: pointer
+      background-image: url(../images/button.gif)
+      background-repeat: no-repeat
+      background-position: 0 0
+      margin-bottom: 10px
+      float: left
     div.error
       h2
         background-image: url(/images/error_h2.gif)
@@ -292,6 +309,7 @@ div
       border-radius: 20px
       padding: 20px
       display: block
+      clear: both
       textarea
         width: 100%
       pre
@@ -310,7 +328,6 @@ div
           overflow: auto
           margin-bottom: 0px
           padding-bottom: 0px
-
 
 
 * html *
