--- a/views/style.sass
+++ b/views/style.sass
@@ -165,6 +165,7 @@ div
       line-height: 100px
       font-size: 16px
       font-weight: bold
+      color: #fff
   &.section
     padding-bottom: 35px
     h2
