erbを削除。html2hamlに共通化。

--- a/views/created.haml
+++ b/views/created.haml
@@ -3,32 +3,28 @@
     .error
       %h2 HTMLに下記の問題があります。
       %p= flash[:error]
-      .to_top
-        %a{:href => '/'}トップページに戻る
-
+      .to_top <a href="/">トップページに戻る</a>
   - else
     %h2 インデントの美しいHTMLが出来ました
     %button.raw plane text
     .source
-      %textarea{:style => 'display:none;'}
+      %textarea{:style => 'display:none'}
         =h @html
       %pre
         %code=h @html
 :javascript
   $(function(){
-    
-    $('.source textarea').height($('.source pre').height());
-    
+    $('.source textarea').height($('.source pre').height())
     $('button.raw').click(function(){
       if ($('.source textarea').css('display') == 'none') {
         $('button.raw').text('html')
-        $('.source textarea').fadeIn();
-        $('.source pre').hide();
-        $('.source textarea').focus().select();
+        $('.source textarea').fadeIn()
+        $('.source pre').hide()
+        $('.source textarea').focus().select()
       } else {
         $('button.raw').text('plane text')
-        $('.source textarea').hide();
-        $('.source pre').fadeIn();
+        $('.source textarea').hide()
+        $('.source pre').fadeIn()
       }
-    });
-  });
+    })
+  })
