--- a/views/style.sass
+++ b/views/style.sass
@@ -313,6 +313,7 @@ div
       clear: both
       textarea
         width: 100%
+        font-size: 13px
       pre
         display: block
         background-image: url(../images/pre_code.gif)
