--- a/views/style.sass
+++ b/views/style.sass
@@ -177,6 +177,21 @@ div
     h2
       background-image: url(/images/form_h2.gif)
       height: 20px
+    span.updnWatermark
+      position: relative
+      width: 0
+      height: 1.25em
+      vertical-align: middle
+      *zoom: 1
+      label
+        position: absolute
+        left: 1em
+        top: 0.9em
+        white-space: nowrap
+        color: #999
+        padding-left: 4px
+        height: 1.25em
+        vertical-align: middle
     textarea
       height: 450px
       width: 840px
