--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,6 +11,7 @@
     %link{:href => 'style.css', :rel => 'stylesheet', :type => 'text/css'}
     %link{:rel => 'shortcut icon', :href => '/favicon.ico'}
     %script{:src => 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js', :type => 'text/javascript'}
+    %script{:src => '/javascript/jquery.updnWatermark.js', :type => 'text/javascript'}
   %body
     #header
       %h1 <a href="/">Ham Cutlet</a>
