ウォーターマークのラベル上のポインターをテキストモードに変更。

--- a/views/style.sass
+++ b/views/style.sass
@@ -1,6 +1,5 @@
 @charset "utf-8"
 
-
 div:after, ul:after, dl:after
   content: "."
   display: block
@@ -192,6 +191,7 @@ div
         padding-left: 4px
         height: 1.25em
         vertical-align: middle
+        cursor: text
     textarea
       height: 450px
       width: 840px
@@ -345,7 +345,6 @@ div
           overflow: auto
           margin-bottom: 0px
           padding-bottom: 0px
-
 
 * html *
   background-color: #9dd8ce !important
