--- a/views/style.sass
+++ b/views/style.sass
@@ -295,15 +295,13 @@ div
     text-align: center
   &#created
     h2
-      background-image: url(/images/created_h2.gif)
       height: 20px
-      width: 400px
       display: block
       float: right
       margin-top: 10px
-      margin-right: 200px
     button.raw
       margin-left: 10px
+      margin-right: 15px
       width: 281px
       height: 37px
       border: 0
@@ -358,3 +356,7 @@ div
   background-position: center center
   background-image: url(../images/error.jpg) !important
   display: block !important
+
+#tweet_button
+  :float left
+  :margin-top 9px
