--- a/views/created.haml
+++ b/views/created.haml
@@ -1,14 +1,15 @@
 #created.section
   - if flash[:error]
     .error
-      %h2 HTMLに下記の問題があります。
+      %h2= t.haml_has_some_problem
       %p= flash[:error]
-      .to_top <a href="/">トップページに戻る</a>
+      .to_top
+        %a{:href => '/'}= t.back_to_top
   - else
-    %h2 インデントの美しいHTMLが出来ました
+    %h2= t.beautiful_html_was_made
     %button.raw Plane Text
     #tweet_button
-      %a{:href => "http://twitter.com/share", :class => "twitter-share-button", :'data-count' => "horizontal", :'data-via' => "komagata", :'data-related' => "machida:Ham Cutletのデザイナー", :'data-lang' => "ja"} Tweet
+      %a{:href => "http://twitter.com/share", :class => "twitter-share-button", :'data-count' => "horizontal", :'data-via' => "komagata", :'data-related' => "machida:designer", :'data-lang' => "ja"} Tweet
       %script{:type => "text/javascript", :src => "http://platform.twitter.com/widgets.js"}
     .source
       %textarea{:style => 'display:none'}~h @html
