Google Extention 追加

--- a/views/style.sass
+++ b/views/style.sass
@@ -238,7 +238,6 @@ div
     div.main
       background-color: white
       padding: 20px
-      float: left
       -webkit-border-radius: 20px
       -moz-border-radius: 20px
       border-radius: 20px
@@ -295,11 +294,13 @@ div
       color: #FFF
       padding-left: 35px
       margin-left: 10px
-    ul li
-      margin-bottom: 10px
-      text-align: right
-      &:last-child
-        margin-bottom: 0px
+    ul
+      margin-bottom: 30px
+      li
+        margin-bottom: 10px
+        text-align: right
+        &:last-child
+          margin-bottom: 0px
     a
       &:link img, &:visited img
         border: 10px solid #cccccc
