--- a/views/index.haml
+++ b/views/index.haml
@@ -22,6 +22,11 @@
     %li
       %a{:href => 'http://haml.ursm.jp/'}
         %img{:alt => 'Haml', :src => '/images/nichi_haml_banner.gif'}/
+  %h2 ハムカツGoogle Extentionあります
+  %ul
+    %li
+      %a{:href => 'http://github.com/mongorian-chop/hamcutlet-extension'}
+        %img{:alt => 'Haml', :src => '/images/chrome_banner.gif'}/
 #request.section
   %h2= t.to_file_a_bug_or_suggest_a_new_fueature
   .main
