localize text chrome extension

--- a/views/index.haml
+++ b/views/index.haml
@@ -22,7 +22,7 @@
     %li
       %a{:href => 'http://haml.ursm.jp/'}
         %img{:alt => 'Haml', :src => '/images/nichi_haml_banner.gif'}/
-  %h2 ハムカツGoogle Extentionあります
+  %h2= t.chrome_extension_for_hamcutlet
   %ul
     %li
       %a{:href => 'http://github.com/mongorian-chop/hamcutlet-extension'}
