--- a/views/index.haml
+++ b/views/index.haml
@@ -25,7 +25,7 @@
   %h2= t.chrome_extension_for_hamcutlet
   %ul
     %li
-      %a{:href => 'http://github.com/mongorian-chop/hamcutlet-extension'}
+      %a{:href => 'https://chrome.google.com/extensions/detail/ncaanpedogldlpcdhcjhnncihedgcndc'}
         %img{:alt => 'Haml', :src => '/images/chrome_banner.gif'}/
 #request.section
   %h2= t.to_file_a_bug_or_suggest_a_new_fueature
