--- a/views/layout.haml
+++ b/views/layout.haml
@@ -16,6 +16,8 @@
     #header
       %h1 <a href="/">Ham Cutlet</a>
       %h2= t.makes_your_html_surce_beautifully_indneted
+      .ad
+        %img{:alt => 'ad', :src => '/images/728x90.gif'}/
     = yield
     #footer
       %p.copyright
