--- a/views/style.sass
+++ b/views/style.sass
@@ -145,7 +145,6 @@ body
 div
   &#header
     background-image: url(../images/header.gif)
-    height: 110px
     background-repeat: no-repeat
     h1 a
       display: block
@@ -163,6 +162,11 @@ div
       font-weight: bold
       color: white
       padding-top: 25px
+    .ad
+      width: 798px
+      margin: 0 auto
+      padding: 15px 0 25px
+      clear: both
   &.section
     padding-bottom: 35px
     h2
