--- a/views/index.haml
+++ b/views/index.haml
@@ -32,6 +32,8 @@
     %li
       %a{:href => 'http://kowabana.jp/'}
         %img{:alt => '怖話', :src => '/images/kowabana.gif'}/
+    %li      
+      %img{:alt => 'ad', :src => '/images/234x60.gif'}/
 #request.section
   %h2= t.to_file_a_bug_or_suggest_a_new_fueature
   .main
