added google adsense. #1

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -17,7 +17,13 @@
       %h1 <a href="/">Ham Cutlet</a>
       %h2= t.makes_your_html_surce_beautifully_indneted
       .ad
-        %img{:alt => 'ad', :src => '/images/728x90.gif'}/
+        - if ENV['RACK_ENV'] == 'production'
+          :javascript
+            google_ad_client = "ca-pub-4874336770380631";                                                                 
+            google_ad_slot = "3472596046";
+            google_ad_width = 728;
+            google_ad_height = 90;                                                                                        
+          %script(type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js")
     = yield
     #footer
       %p.copyright
