--- a/views/index.haml
+++ b/views/index.haml
@@ -27,13 +27,11 @@
     %li
       %a{:href => 'https://chrome.google.com/extensions/detail/ncaanpedogldlpcdhcjhnncihedgcndc'}
         %img{:alt => 'Haml', :src => '/images/chrome_banner.gif'}/
-  %h2.kowabana= "怖い話が17,000話以上無料で読める"
+  %h2.kowabana= t.many_horror_stories_available
   %ul.kowabana
     %li
       %a{:href => 'http://kowabana.jp/'}
-        %img{:alt => '怖話', :src => '/images/kowabana.gif'}/
-    %li      
-      %img{:alt => 'ad', :src => '/images/234x60.gif'}/
+        %img{:alt => t.kowabana, :src => '/images/kowabana.gif'}/
 #request.section
   %h2= t.to_file_a_bug_or_suggest_a_new_fueature
   .main
@@ -48,7 +46,7 @@
         $.updnWatermark.attachAll();
         $('.updnWatermark > label').click(function(){
             $(this).toggle();
-            $("textarea").select();
+            $('textarea').select();
         }).blur(function(){
             $(this).toggle();
         });
