--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,33 +1,58 @@
-!!! XML
 !!!
 %html
   %head
-    %meta{:name => 'description', :content => ''}
-    %meta{:name => 'keywords', :content => ''}
-    %meta{'http-equiv' => 'Content-Type', 'content' => 'text/html; charset=utf-8'}
-    %meta{'http-equiv' => 'Content-Style-Type', 'content' => 'text/css'}
-    %meta{'http-equiv' => 'Content-Script-Type', 'content' => 'text/javascript'}
-    %title== #{t.makes_your_html_surce_beautifully_indneted} - Ham Cutlet
-    %link{:href => 'style.css', :rel => 'stylesheet', :type => 'text/css'}
-    %link{:rel => 'shortcut icon', :href => '/favicon.ico'}
-    %script{:src => 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js', :type => 'text/javascript'}
-    %script{:src => '/javascript/jquery.updnWatermark.js', :type => 'text/javascript'}
-  %body
-    #header
-      %h1 <a href="/">Ham Cutlet</a>
-      %h2= t.makes_your_html_surce_beautifully_indneted
-      .ad
-        - if ENV['RACK_ENV'] == 'production'
-          :javascript
-            google_ad_client = "ca-pub-4874336770380631";                                                                 
-            google_ad_slot = "3472596046";
-            google_ad_width = 728;
-            google_ad_height = 90;                                                                                        
-          %script(type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js")
-    = yield
-    #footer
-      %p.copyright
-        Copyright &copy; <a href="http://fjord.jp">FJORD, LLC</a> Created by <a href="http://twitter.com/machida">@machida</a> and <a href="http://twitter.com/komagata">@komagata</a>
+    %meta{name: 'description', content: ''}
+    %meta{name: 'keywords', content: ''}
+    %meta{'http-equiv': 'Content-Type', 'content': 'text/html; charset=utf-8'}
+    %meta{'http-equiv': 'Content-Style-Type', 'content': 'text/css'}
+    %meta{'http-equiv': 'Content-Script-Type', 'content': 'text/javascript'}
+    %title== #{t.makes_your_html_surce_beautifully_indneted.tr("<br>", "")} - Ham Cutlet
+    %link{rel: 'shortcut icon', href: '/favicon.ico'}
+    %link{href: "/assets/stylesheets/application.css", rel: 'stylesheet', type: 'text/css'}
+    %link{href: "//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel: 'stylesheet', type: 'text/css'}
+    %link{href: "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/styles/default.min.css", rel: 'stylesheet', type: 'text/css'}
+    %script{src: '//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js', type: 'text/javascript'}
+    %script{src: '//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.7.0/highlight.min.js', type: 'text/javascript'}
+    %script{src: '/assets/javascripts/application.js', type: 'text/javascript'}
+  %body.body
+    - if request.query_string.include?('restart') || !flash[:error]
+      %header.header
+        .header__hgroup
+          .header__image-container
+            %img{alt: 'Haml', src: '/images/ham.png'}
+          %h1.header__title
+            %a.header__title-link{href: '/'}
+              = t.ham_cutlet
+          %h2.header__sub-title
+            = t.makes_your_html_surce_beautifully_indneted
+        %section.made-with
+          %a{href: 'http://haml.info/'}
+            %img{alt: 'Haml', src: '/images/haml-logo.png', class: 'made-with__image'}
+          .tools
+            %ul.tools__items
+              %li.tools__item
+                %a{href: 'https://chrome.google.com/extensions/detail/ncaanpedogldlpcdhcjhnncihedgcndc', class: 'tools__item-link'}
+                  .tools__item-icon
+                    %i.fa.fa-chrome
+                  %span.tools__item-label Chrome Extension
+              %li.tools__item
+                %a{href: 'https://chrome.google.com/extensions/detail/ncaanpedogldlpcdhcjhnncihedgcndc', class: 'tools__item-link'}
+                  .tools__item-icon.is-github
+                    %i.fa.fa-github
+                  %span.tools__item-label repository
+        -#
+          .header__ad
+            - if ENV['RACK_ENV'] == 'production'
+              :javascript
+                google_ad_client = "ca-pub-4874336770380631";
+                google_ad_slot = "3472596046";
+                google_ad_width = 160;
+                google_ad_height = 600;
+              %script(type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js")
+        %small.header__copyright
+          Copyright <i class="fa fa-copyright"></i> <a href="http://fjord.jp">FJORD, LLC</a>
+    %main.main{class: flash[:error] ? 'is-error' : ''}
+      = yield
     - if ENV['RACK_ENV'] == 'production'
       :javascript
         var _gaq = _gaq || [];
